Changing part 1 according to new instructions

--- a/part1.ipynb
+++ b/part1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,62 +17,174 @@
     "\n",
     "user_clip = pd.read_csv('user_clip.csv').dropna()\n",
     "r_avg = user_clip['weight'].mean()\n",
-    "users_bias = user_clip.groupby('user_id')['weight'].mean() - r_avg\n",
-    "clips_bias = user_clip.groupby('clip_id')['weight'].mean() - r_avg"
+    "initial_users_bias = user_clip.groupby('user_id')['weight'].mean() - r_avg\n",
+    "initial_clips_bias = user_clip.groupby('clip_id')['weight'].mean() - r_avg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df = pd.read_csv('test.csv').filter(['user_id', 'clip_id']).dropna()\n",
-    "users_bias = users_bias.reset_index().rename(columns={'index': 'user_id', 'weight': 'user_bias'})\n",
-    "clips_bias = clips_bias.reset_index().rename(columns={'index': 'clip_id', 'weight': 'clip_bias'})\n",
-    "test_df = test_df.merge(users_bias, on=['user_id'], how='left')\n",
-    "test_df = test_df.merge(clips_bias, on=['clip_id'], how='left')\n",
-    "test_df['prediction'] = r_avg + test_df['user_bias'] + test_df['clip_bias']\n",
-    "test_df.filter(['user_id', 'clip_id', 'prediction']).rename(columns={'prediction': 'weight'}).to_csv('319044434_314779166_task1.csv', index=False)"
+    "# Initialize parameters\n",
+    "users = user_clip['user_id'].unique()\n",
+    "clips = user_clip['clip_id'].unique()\n",
+    "num_users = len(users)\n",
+    "num_clips = len(clips)\n",
+    "\n",
+    "user_map = {user: i for i, user in enumerate(users)}\n",
+    "clip_map = {clip: i for i, clip in enumerate(clips)}\n",
+    "\n",
+    "user_indices = user_clip['user_id'].map(user_map).values\n",
+    "clip_indices = user_clip['clip_id'].map(clip_map).values\n",
+    "train_weights = user_clip['weight'].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user_clip = user_clip.merge(users_bias, on=['user_id'], how='left')\n",
-    "user_clip = user_clip.merge(clips_bias, on=['clip_id'], how='left')\n",
-    "user_clip['prediction'] = r_avg + user_clip['user_bias'] + user_clip['clip_bias']\n",
-    "user_clip['prediction'] = user_clip['prediction'].clip(lower=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "965092157923.618\n"
+      "[-489.57542438 -350.16378199  793.9636895  ... -347.29151232 -344.43436947\n",
+      "  867.03255635]\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import tqdm\n",
+    "from time import time\n",
+    "\n",
+    "user_bias = np.zeros(num_users)\n",
+    "clip_bias = np.zeros(num_clips)\n",
+    "\n",
+    "learning_rate = 0.01\n",
+    "num_iterations = 500\n",
+    "\n",
+    "start = time()\n",
+    "while time() - start < 1800:\n",
+    "# for _ in tqdm.tqdm(range(num_iterations)):\n",
+    "# Gradient descent\n",
+    "# for _ in range(num_iterations):\n",
+    "    for u_idx, c_idx, r in zip(user_indices, clip_indices, train_weights):\n",
+    "        error = r - r_avg - user_bias[u_idx] - clip_bias[c_idx]\n",
+    "        user_bias[u_idx] -= learning_rate * (-2 * error + 0.2 * user_bias[u_idx])\n",
+    "        clip_bias[c_idx] -= learning_rate * (-2 * error + 0.2 * clip_bias[c_idx])\n",
+    "print(user_bias)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       user_id  clip_id  weight   user_bias   clip_bias\n",
+      "0          145    64135     131 -489.575424  627.017770\n",
+      "1          145    71619     445 -489.575424 -188.407417\n",
+      "2          145    76710      74 -489.575424 -111.415854\n",
+      "3          145    77532     157 -489.575424  317.029923\n",
+      "4          145    98678      67 -489.575424 -255.014235\n",
+      "...        ...      ...     ...         ...         ...\n",
+      "80597   999659   844418      36 -867.202176  -88.060018\n",
+      "80598   999975    43850      74 -742.448001   72.338029\n",
+      "80599   999975   249959      82 -742.448001  243.376635\n",
+      "80600   999975   500176      98 -742.448001  102.903631\n",
+      "80601   999975   627211      73 -742.448001  -53.618399\n",
+      "\n",
+      "[80602 rows x 5 columns]\n",
+      "       user_id  clip_id  weight   user_bias   clip_bias  prediction\n",
+      "0          145    64135     131 -489.575424  627.017770  870.754522\n",
+      "1          145    71619     445 -489.575424 -188.407417   55.329335\n",
+      "2          145    76710      74 -489.575424 -111.415854  132.320898\n",
+      "3          145    77532     157 -489.575424  317.029923  560.766675\n",
+      "4          145    98678      67 -489.575424 -255.014235    0.000000\n",
+      "...        ...      ...     ...         ...         ...         ...\n",
+      "80597   999659   844418      36 -867.202176  -88.060018    0.000000\n",
+      "80598   999975    43850      74 -742.448001   72.338029   63.202204\n",
+      "80599   999975   249959      82 -742.448001  243.376635  234.240810\n",
+      "80600   999975   500176      98 -742.448001  102.903631   93.767805\n",
+      "80601   999975   627211      73 -742.448001  -53.618399    0.000000\n",
+      "\n",
+      "[80602 rows x 6 columns]\n",
+      "948851764832.1565\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create DataFrames for user and clip biases\n",
+    "users_bias = pd.DataFrame({'user_id': users, 'user_bias': user_bias})\n",
+    "clips_bias = pd.DataFrame({'clip_id': clips, 'clip_bias': clip_bias})\n",
+    "\n",
+    "user_clip = user_clip.merge(users_bias, on=['user_id'], how='left')\n",
+    "user_clip = user_clip.merge(clips_bias, on=['clip_id'], how='left')\n",
+    "print(user_clip)\n",
+    "user_clip['prediction'] = r_avg + user_clip['user_bias'] + user_clip['clip_bias']\n",
+    "user_clip['prediction'] = user_clip['prediction'].clip(lower=0)\n",
+    "print(user_clip)\n",
+    "\n",
     "def f1(df):\n",
     "    error = ((df['prediction'] - df['weight']) ** 2).sum()\n",
     "    regularization = 0.1 * ((df['user_bias'] ** 2).sum() + (df['clip_bias'] ** 2).sum())\n",
     "    return error + regularization\n",
     "\n",
-    "print(f1(user_clip))\n",
+    "print(f1(user_clip))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      user_id  clip_id   user_bias    clip_bias   prediction\n",
+      "0      703680   155818  -90.595789   -76.367212   566.349174\n",
+      "1      801034   674816 -336.434020   264.506940   661.385096\n",
+      "2      975852   181501   -1.052007  -213.965562   518.294607\n",
+      "3      563786   589532 -212.498880  -154.035842   366.777454\n",
+      "4      680731   173540 -194.354470    -6.078988   532.878718\n",
+      "...       ...      ...         ...          ...          ...\n",
+      "2973   888088   154970 -609.967284  -192.378217     0.000000\n",
+      "2974   791263    90870 -562.687802  -241.720756     0.000000\n",
+      "2975   527585   918042 -225.956967  3476.738529  3984.093738\n",
+      "2976   197117   765004 -180.900104  -313.323427   239.088645\n",
+      "2977    38878   225992  125.988739  -140.148731   719.152184\n",
+      "\n",
+      "[2978 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prepare the test data for predictions\n",
+    "test_df = pd.read_csv('test.csv').filter(['user_id', 'clip_id']).dropna()\n",
+    "test_df = test_df.merge(users_bias, on='user_id', how='left')\n",
+    "test_df = test_df.merge(clips_bias, on='clip_id', how='left')\n",
     "\n",
-    "# TODO: Question for the metargel:\n",
-    "# 1. What do we do with predictions below 0 (both in train and test)?\n",
-    "# 2. What do we do with missing values (currently - we drop them)?\n",
-    "# 3. Is f1 and f2 on the test or train?"
+    "# Calculate the predictions\n",
+    "test_df['prediction'] = r_avg + test_df['user_bias'].fillna(0) + test_df['clip_bias'].fillna(0)\n",
+    "test_df['prediction'] = test_df.apply(\n",
+    "    lambda row: 0 if pd.isna(row['user_bias']) or pd.isna(row['clip_bias']) else r_avg + row['user_bias'] + row['clip_bias'],\n",
+    "    axis=1\n",
+    ")\n",
+    "test_df['prediction'] = test_df['prediction'].clip(lower=0)\n",
+    "\n",
+    "# Save the predictions to CSV\n",
+    "test_df.filter(['user_id', 'clip_id', 'prediction']).rename(columns={'prediction': 'weight'}).to_csv('319044434_314779166_task1.csv', index=False)\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "print(test_df)"
    ]
   },
   {
@@ -84,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,27 +244,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       user_id clip_id  weight  prediction\n",
-      "0          145   64135     131   31.292638\n",
-      "1          145   71619     445    1.012568\n",
-      "2          145   76710      74    0.216014\n",
-      "3          145   77532     157    0.231579\n",
-      "4          145   98678      67    0.065738\n",
-      "...        ...     ...     ...         ...\n",
-      "80597   999659  844418      36    0.010661\n",
-      "80598   999975   43850      74    0.020930\n",
-      "80599   999975  249959      82    0.004242\n",
-      "80600   999975  500176      98    0.004284\n",
-      "80601   999975  627211      73    0.003335\n",
-      "\n",
-      "[80602 rows x 4 columns]\n",
       "229268390659.79822\n"
      ]
     }
