--- a/part1.ipynb
+++ b/part1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,6 +142,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
    "outputs": [
@@ -185,6 +192,125 @@
     "\n",
     "# Display the DataFrame\n",
     "print(test_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(18420,)\n",
+      "[945.31986429 172.27293496 249.04250585 ... 490.80189868 551.79532564\n",
+      " 421.39445629]\n",
+      "F1 score on training data:  947691338527.4786\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy.sparse import csr_matrix\n",
+    "from scipy.sparse.linalg import lsqr\n",
+    "#LS VERSION\n",
+    "\n",
+    "# Load the data\n",
+    "user_clip = pd.read_csv('user_clip.csv').dropna()\n",
+    "# Calculate the average rating\n",
+    "r_avg = user_clip['weight'].mean()\n",
+    "\n",
+    "# Initialize parameters\n",
+    "users = user_clip['user_id'].unique()\n",
+    "clips = user_clip['clip_id'].unique()\n",
+    "num_users = len(users)\n",
+    "num_clips = len(clips)\n",
+    "\n",
+    "#map users and clips to indices\n",
+    "user_map = {user: i for i, user in enumerate(users)}\n",
+    "clip_map = {clip: i for i, clip in enumerate(clips)}\n",
+    "\n",
+    "# Extract user and clip indices\n",
+    "user_indices = user_clip['user_id'].map(user_map).values\n",
+    "clip_indices = user_clip['clip_id'].map(clip_map).values\n",
+    "train_weights = user_clip['weight'].values # ratings\n",
+    "\n",
+    "# Construct the sparse design matrix\n",
+    "num_ratings = len(train_weights)\n",
+    "row_indices = np.arange(num_ratings)\n",
+    "\n",
+    "# Users part of the matrix\n",
+    "data_users = np.ones(num_ratings)\n",
+    "col_indices_users = user_indices\n",
+    "\n",
+    "# Clips part of the matrix\n",
+    "data_clips = np.ones(num_ratings)\n",
+    "col_indices_clips = clip_indices + num_users\n",
+    "\n",
+    "# Combine users and clips into a single sparse matrix representation\n",
+    "row_indices_combined = np.concatenate([row_indices, row_indices])\n",
+    "col_indices_combined = np.concatenate([col_indices_users, col_indices_clips])\n",
+    "data_combined = np.concatenate([data_users, data_clips])\n",
+    "\n",
+    "# Create the sparse matrix\n",
+    "X_sparse = csr_matrix((data_combined, (row_indices_combined, col_indices_combined)), shape=(num_ratings, num_users + num_clips))\n",
+    "\n",
+    "# Response vector\n",
+    "y = train_weights - r_avg\n",
+    "\n",
+    "# Solve the sparse normal equation\n",
+    "beta = lsqr(X_sparse, y)[0]\n",
+    "print(beta.shape)   \n",
+    "# Extract user and clip biases\n",
+    "user_bias = beta[:num_users]\n",
+    "\n",
+    "clip_bias = beta[num_users:]\n",
+    "print(clip_bias)\n",
+    "# print(user_bias)\n",
+    "# print(clip_bias)\n",
+    "# Create DataFrames for user and clip biases\n",
+    "users_bias = pd.DataFrame({'user_id': users, 'user_bias': user_bias})\n",
+    "clips_bias = pd.DataFrame({'clip_id': clips, 'clip_bias': clip_bias})\n",
+    "\n",
+    "# Merge the biases with the original data\n",
+    "user_clip = user_clip.merge(users_bias, on=['user_id'], how='left')\n",
+    "user_clip = user_clip.merge(clips_bias, on=['clip_id'], how='left')\n",
+    "\n",
+    "user_bias= user_clip['user_bias']\n",
+    "clip_bias= user_clip['clip_bias']\n",
+    "# Calculate predictions\n",
+    "user_clip['prediction'] = r_avg + user_bias + clip_bias\n",
+    "user_clip['prediction'] = user_clip['prediction'].clip(lower=0)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Prepare the test data for predictions\n",
+    "test_df = pd.read_csv('test.csv').filter(['user_id', 'clip_id']).dropna()\n",
+    "test_df = test_df.merge(users_bias, on='user_id', how='left')\n",
+    "test_df = test_df.merge(clips_bias, on='clip_id', how='left')\n",
+    "\n",
+    "# Calculate the predictions\n",
+    "test_df['prediction'] = r_avg + test_df['user_bias'].fillna(0) + test_df['clip_bias'].fillna(0)\n",
+    "test_df['prediction'] = test_df['prediction'].clip(lower=0)\n",
+    "\n",
+    "# Save the predictions to CSV\n",
+    "test_df.filter(['user_id', 'clip_id', 'prediction']).rename(columns={'prediction': 'weight'}).to_csv('319044434_314779166_task1.csv', index=False)\n",
+    "\n",
+    "#save to csv file\n",
+    "test_df.to_csv('319044434_314779166_task1.csv', index=False)\n",
+    "\n",
+    "print(\"F1 score on training data: \", f1(user_clip))\n",
+    "\n",
+    "# Calculate the objective function (error + regularization)\n",
+    "def f1(df):\n",
+    "    error = ((df['prediction'] - df['weight']) ** 2).sum()\n",
+    "    regularization = 0.1 * ((df['user_bias'] ** 2).sum() + (df['clip_bias'] ** 2).sum())\n",
+    "    return error + regularization\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -281,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
