--- a/part1.ipynb
+++ b/part1.ipynb
@@ -9,204 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "user_clip = pd.read_csv('user_clip.csv').dropna()\n",
-    "r_avg = user_clip['weight'].mean()\n",
-    "initial_users_bias = user_clip.groupby('user_id')['weight'].mean() - r_avg\n",
-    "initial_clips_bias = user_clip.groupby('clip_id')['weight'].mean() - r_avg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize parameters\n",
-    "users = user_clip['user_id'].unique()\n",
-    "clips = user_clip['clip_id'].unique()\n",
-    "num_users = len(users)\n",
-    "num_clips = len(clips)\n",
-    "\n",
-    "user_map = {user: i for i, user in enumerate(users)}\n",
-    "clip_map = {clip: i for i, clip in enumerate(clips)}\n",
-    "\n",
-    "user_indices = user_clip['user_id'].map(user_map).values\n",
-    "clip_indices = user_clip['clip_id'].map(clip_map).values\n",
-    "train_weights = user_clip['weight'].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-489.57542438 -350.16378199  793.9636895  ... -347.29151232 -344.43436947\n",
-      "  867.03255635]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import tqdm\n",
-    "from time import time\n",
-    "\n",
-    "user_bias = np.zeros(num_users)\n",
-    "clip_bias = np.zeros(num_clips)\n",
-    "\n",
-    "learning_rate = 0.01\n",
-    "num_iterations = 500\n",
-    "\n",
-    "start = time()\n",
-    "while time() - start < 1800:\n",
-    "# for _ in tqdm.tqdm(range(num_iterations)):\n",
-    "# Gradient descent\n",
-    "# for _ in range(num_iterations):\n",
-    "    for u_idx, c_idx, r in zip(user_indices, clip_indices, train_weights):\n",
-    "        error = r - r_avg - user_bias[u_idx] - clip_bias[c_idx]\n",
-    "        user_bias[u_idx] -= learning_rate * (-2 * error + 0.2 * user_bias[u_idx])\n",
-    "        clip_bias[c_idx] -= learning_rate * (-2 * error + 0.2 * clip_bias[c_idx])\n",
-    "print(user_bias)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       user_id  clip_id  weight   user_bias   clip_bias\n",
-      "0          145    64135     131 -489.575424  627.017770\n",
-      "1          145    71619     445 -489.575424 -188.407417\n",
-      "2          145    76710      74 -489.575424 -111.415854\n",
-      "3          145    77532     157 -489.575424  317.029923\n",
-      "4          145    98678      67 -489.575424 -255.014235\n",
-      "...        ...      ...     ...         ...         ...\n",
-      "80597   999659   844418      36 -867.202176  -88.060018\n",
-      "80598   999975    43850      74 -742.448001   72.338029\n",
-      "80599   999975   249959      82 -742.448001  243.376635\n",
-      "80600   999975   500176      98 -742.448001  102.903631\n",
-      "80601   999975   627211      73 -742.448001  -53.618399\n",
-      "\n",
-      "[80602 rows x 5 columns]\n",
-      "       user_id  clip_id  weight   user_bias   clip_bias  prediction\n",
-      "0          145    64135     131 -489.575424  627.017770  870.754522\n",
-      "1          145    71619     445 -489.575424 -188.407417   55.329335\n",
-      "2          145    76710      74 -489.575424 -111.415854  132.320898\n",
-      "3          145    77532     157 -489.575424  317.029923  560.766675\n",
-      "4          145    98678      67 -489.575424 -255.014235    0.000000\n",
-      "...        ...      ...     ...         ...         ...         ...\n",
-      "80597   999659   844418      36 -867.202176  -88.060018    0.000000\n",
-      "80598   999975    43850      74 -742.448001   72.338029   63.202204\n",
-      "80599   999975   249959      82 -742.448001  243.376635  234.240810\n",
-      "80600   999975   500176      98 -742.448001  102.903631   93.767805\n",
-      "80601   999975   627211      73 -742.448001  -53.618399    0.000000\n",
-      "\n",
-      "[80602 rows x 6 columns]\n",
-      "948851764832.1565\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Create DataFrames for user and clip biases\n",
-    "users_bias = pd.DataFrame({'user_id': users, 'user_bias': user_bias})\n",
-    "clips_bias = pd.DataFrame({'clip_id': clips, 'clip_bias': clip_bias})\n",
-    "\n",
-    "user_clip = user_clip.merge(users_bias, on=['user_id'], how='left')\n",
-    "user_clip = user_clip.merge(clips_bias, on=['clip_id'], how='left')\n",
-    "print(user_clip)\n",
-    "user_clip['prediction'] = r_avg + user_clip['user_bias'] + user_clip['clip_bias']\n",
-    "user_clip['prediction'] = user_clip['prediction'].clip(lower=0)\n",
-    "print(user_clip)\n",
-    "\n",
-    "def f1(df):\n",
-    "    error = ((df['prediction'] - df['weight']) ** 2).sum()\n",
-    "    regularization = 0.1 * ((df['user_bias'] ** 2).sum() + (df['clip_bias'] ** 2).sum())\n",
-    "    return error + regularization\n",
-    "\n",
-    "print(f1(user_clip))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      user_id  clip_id   user_bias    clip_bias   prediction\n",
-      "0      703680   155818  -90.595789   -76.367212   566.349174\n",
-      "1      801034   674816 -336.434020   264.506940   661.385096\n",
-      "2      975852   181501   -1.052007  -213.965562   518.294607\n",
-      "3      563786   589532 -212.498880  -154.035842   366.777454\n",
-      "4      680731   173540 -194.354470    -6.078988   532.878718\n",
-      "...       ...      ...         ...          ...          ...\n",
-      "2973   888088   154970 -609.967284  -192.378217     0.000000\n",
-      "2974   791263    90870 -562.687802  -241.720756     0.000000\n",
-      "2975   527585   918042 -225.956967  3476.738529  3984.093738\n",
-      "2976   197117   765004 -180.900104  -313.323427   239.088645\n",
-      "2977    38878   225992  125.988739  -140.148731   719.152184\n",
-      "\n",
-      "[2978 rows x 5 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Prepare the test data for predictions\n",
-    "test_df = pd.read_csv('test.csv').filter(['user_id', 'clip_id']).dropna()\n",
-    "test_df = test_df.merge(users_bias, on='user_id', how='left')\n",
-    "test_df = test_df.merge(clips_bias, on='clip_id', how='left')\n",
-    "\n",
-    "# Calculate the predictions\n",
-    "test_df['prediction'] = r_avg + test_df['user_bias'].fillna(0) + test_df['clip_bias'].fillna(0)\n",
-    "test_df['prediction'] = test_df.apply(\n",
-    "    lambda row: 0 if pd.isna(row['user_bias']) or pd.isna(row['clip_bias']) else r_avg + row['user_bias'] + row['clip_bias'],\n",
-    "    axis=1\n",
-    ")\n",
-    "test_df['prediction'] = test_df['prediction'].clip(lower=0)\n",
-    "\n",
-    "# Save the predictions to CSV\n",
-    "test_df.filter(['user_id', 'clip_id', 'prediction']).rename(columns={'prediction': 'weight'}).to_csv('319044434_314779166_task1.csv', index=False)\n",
-    "\n",
-    "# Display the DataFrame\n",
-    "print(test_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(18420,)\n",
-      "[945.31986429 172.27293496 249.04250585 ... 490.80189868 551.79532564\n",
-      " 421.39445629]\n",
-      "F1 score on training data:  947691338527.4786\n"
+      "Loss function for training data: 935471510070.5972\n"
      ]
     }
    ],
@@ -215,102 +25,86 @@
     "import pandas as pd\n",
     "from scipy.sparse import csr_matrix\n",
     "from scipy.sparse.linalg import lsqr\n",
-    "#LS VERSION\n",
     "\n",
     "# Load the data\n",
-    "user_clip = pd.read_csv('user_clip.csv').dropna()\n",
+    "user_clip_train = pd.read_csv('user_clip.csv').dropna()\n",
+    "\n",
     "# Calculate the average rating\n",
-    "r_avg = user_clip['weight'].mean()\n",
+    "r_avg = user_clip_train['weight'].mean()\n",
     "\n",
-    "# Initialize parameters\n",
-    "users = user_clip['user_id'].unique()\n",
-    "clips = user_clip['clip_id'].unique()\n",
-    "num_users = len(users)\n",
-    "num_clips = len(clips)\n",
-    "\n",
-    "#map users and clips to indices\n",
-    "user_map = {user: i for i, user in enumerate(users)}\n",
-    "clip_map = {clip: i for i, clip in enumerate(clips)}\n",
+    "# Create mappings for user_id and clip_id to indices\n",
+    "user_ids = pd.Categorical(user_clip_train['user_id'])\n",
+    "user_map = {user: i for i, user in enumerate(user_ids.categories)}\n",
+    "clip_ids = pd.Categorical(user_clip_train['clip_id'])\n",
+    "clip_map = {clip: i for i, clip in enumerate(clip_ids.categories)}\n",
     "\n",
     "# Extract user and clip indices\n",
-    "user_indices = user_clip['user_id'].map(user_map).values\n",
-    "clip_indices = user_clip['clip_id'].map(clip_map).values\n",
-    "train_weights = user_clip['weight'].values # ratings\n",
+    "user_indices = user_clip_train['user_id'].map(user_map).values\n",
+    "clip_indices = user_clip_train['clip_id'].map(clip_map).values\n",
     "\n",
-    "# Construct the sparse design matrix\n",
-    "num_ratings = len(train_weights)\n",
+    "# Create the sparse design matrix\n",
+    "num_ratings = len(user_clip_train)\n",
+    "num_users = len(user_ids.categories)\n",
+    "num_clips = len(clip_ids.categories)\n",
+    "\n",
+    "# Build the sparse matrix using user and clip indices\n",
     "row_indices = np.arange(num_ratings)\n",
-    "\n",
-    "# Users part of the matrix\n",
-    "data_users = np.ones(num_ratings)\n",
     "col_indices_users = user_indices\n",
-    "\n",
-    "# Clips part of the matrix\n",
-    "data_clips = np.ones(num_ratings)\n",
     "col_indices_clips = clip_indices + num_users\n",
     "\n",
-    "# Combine users and clips into a single sparse matrix representation\n",
+    "data_users = np.ones(num_ratings)\n",
+    "data_clips = np.ones(num_ratings)\n",
+    "\n",
     "row_indices_combined = np.concatenate([row_indices, row_indices])\n",
     "col_indices_combined = np.concatenate([col_indices_users, col_indices_clips])\n",
     "data_combined = np.concatenate([data_users, data_clips])\n",
     "\n",
     "# Create the sparse matrix\n",
-    "X_sparse = csr_matrix((data_combined, (row_indices_combined, col_indices_combined)), shape=(num_ratings, num_users + num_clips))\n",
+    "A = csr_matrix((data_combined, (row_indices_combined, col_indices_combined)), shape=(num_ratings, num_users + num_clips))\n",
     "\n",
-    "# Response vector\n",
-    "y = train_weights - r_avg\n",
+    "# Create the target vector by subtracting the average weight from the actual weights\n",
+    "y = np.array(user_clip_train['weight'] - r_avg)\n",
     "\n",
-    "# Solve the sparse normal equation\n",
-    "beta = lsqr(X_sparse, y)[0]\n",
-    "print(beta.shape)   \n",
-    "# Extract user and clip biases\n",
-    "user_bias = beta[:num_users]\n",
+    "# Solve the linear system to find the biases for users and clips using the least-squares method\n",
+    "b = lsqr(A, y)[0]\n",
     "\n",
-    "clip_bias = beta[num_users:]\n",
-    "print(clip_bias)\n",
-    "# print(user_bias)\n",
-    "# print(clip_bias)\n",
-    "# Create DataFrames for user and clip biases\n",
-    "users_bias = pd.DataFrame({'user_id': users, 'user_bias': user_bias})\n",
-    "clips_bias = pd.DataFrame({'clip_id': clips, 'clip_bias': clip_bias})\n",
+    "# Store the biases in a dictionary\n",
+    "bias_dict = pd.Series(b, index=[f\"user_{user_id}\" for user_id in user_ids.categories] + [f\"clip_{clip_id}\" for clip_id in clip_ids.categories])\n",
     "\n",
-    "# Merge the biases with the original data\n",
-    "user_clip = user_clip.merge(users_bias, on=['user_id'], how='left')\n",
-    "user_clip = user_clip.merge(clips_bias, on=['clip_id'], how='left')\n",
+    "# Function to predict rank for a single row\n",
+    "def predict_viewtime(row):\n",
+    "    user_bias = bias_dict.get(f\"user_{row['user_id']}\", 0)\n",
+    "    clip_bias = bias_dict.get(f\"clip_{row['clip_id']}\", 0)\n",
+    "    return r_avg + user_bias + clip_bias\n",
     "\n",
-    "user_bias= user_clip['user_bias']\n",
-    "clip_bias= user_clip['clip_bias']\n",
-    "# Calculate predictions\n",
-    "user_clip['prediction'] = r_avg + user_bias + clip_bias\n",
-    "user_clip['prediction'] = user_clip['prediction'].clip(lower=0)\n",
+    "# Load the test data\n",
+    "test_df = pd.read_csv('test.csv').dropna()\n",
     "\n",
+    "# Predict weights for the test dataset\n",
+    "test_df['weight_pred'] = test_df.apply(predict_viewtime, axis=1)\n",
     "\n",
+    "# Ensure no negative predictions\n",
+    "test_df['weight_pred'] = test_df['weight_pred'].clip(lower=0)\n",
     "\n",
-    "# Prepare the test data for predictions\n",
-    "test_df = pd.read_csv('test.csv').filter(['user_id', 'clip_id']).dropna()\n",
-    "test_df = test_df.merge(users_bias, on='user_id', how='left')\n",
-    "test_df = test_df.merge(clips_bias, on='clip_id', how='left')\n",
+    "# Save the predictions to a CSV file\n",
+    "test_df[['user_id', 'clip_id', 'weight_pred']].to_csv('319044434_314779166_task1.csv', index=False)\n",
     "\n",
-    "# Calculate the predictions\n",
-    "test_df['prediction'] = r_avg + test_df['user_bias'].fillna(0) + test_df['clip_bias'].fillna(0)\n",
-    "test_df['prediction'] = test_df['prediction'].clip(lower=0)\n",
-    "\n",
-    "# Save the predictions to CSV\n",
-    "test_df.filter(['user_id', 'clip_id', 'prediction']).rename(columns={'prediction': 'weight'}).to_csv('319044434_314779166_task1.csv', index=False)\n",
-    "\n",
-    "#save to csv file\n",
-    "test_df.to_csv('319044434_314779166_task1.csv', index=False)\n",
-    "\n",
-    "print(\"F1 score on training data: \", f1(user_clip))\n",
-    "\n",
-    "# Calculate the objective function (error + regularization)\n",
-    "def f1(df):\n",
+    "# Function to calculate the objective function (error + regularization)\n",
+    "def f1(df, user_bias, clip_bias):\n",
     "    error = ((df['prediction'] - df['weight']) ** 2).sum()\n",
-    "    regularization = 0.1 * ((df['user_bias'] ** 2).sum() + (df['clip_bias'] ** 2).sum())\n",
+    "    regularization = 0.1 * ((user_bias ** 2).sum() + (clip_bias ** 2).sum())\n",
     "    return error + regularization\n",
     "\n",
+    "# Calculate predictions for training data\n",
+    "user_clip_train['prediction'] = user_clip_train.apply(predict_viewtime, axis=1)\n",
     "\n",
-    "\n"
+    "# Extract user and clip biases from the bias series\n",
+    "user_bias_values = bias_dict.iloc[:num_users].values\n",
+    "clip_bias_values = bias_dict.iloc[num_users:].values\n",
+    "\n",
+    "# Calculate the F1 score for training data\n",
+    "f1_score = f1(user_clip_train, user_bias_values, clip_bias_values)\n",
+    "print(f'Loss function for training data: {f1_score}')\n"
    ]
   },
   {
@@ -322,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,14 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "229268390659.79822\n"
+      "229268390659.79825\n"
      ]
     }
    ],
@@ -407,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
